--- a/index.html
+++ b/index.html
@@ -47,10 +47,34 @@
   <body>
     <h2></h2>
     <div id="mapid"></div>
+    <!-- Criar um botao style absolute in right -->
+
+    <div
+      class="btn-group-vertical"
+      style="position: absolute; top: 0; right: 0">
+      <button type="button" class="btn btn-primary" onclick="openModal()">
+        Menu
+      </button>
+    </div>
+
+    <!-- Modal -->
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img id="modal-image" src="" alt="Imagem do Bloco" />
+        <h2 id="modal-title"></h2>
+        <p id="modal-description"></p>
+        <p id="modal-floor"></p>
+        <img id="modal-image-floor" src="" alt="Imagem do Andar" />
+      </div>
+    </div>
+
     <span class="openbtn" onclick="openNav()">&#9776;</span>
     <div class="search-container">
       <input type="text" id="search-input" placeholder="Digite sua pesquisa" />
       <button id="search-button">Pesquisar</button>
+      <!-- Resposta da pesquisa -->
+      <div id="search-response"></div>
     </div>
 
     <div id="mySidenav" class="sidenav">
