--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Modal -->
     <div id="modal" class="modal">
-      <div class="modal-content">
+      <div id="modal-content">
         <span class="close">&times;</span>
         <img id="modal-image" src="" alt="Imagem do Bloco" />
         <h2 id="modal-title"></h2>
